--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,7 @@
 ﻿Version 1.0
 *** This version needs a minimum of Habari 0.7 to run ***
 - Converted the comment form to Habari's built-in form.
+- Updated to the taxonomy format for tags.
 
 Version 0.9
 - Updated in accord with the current state of Habari's HiEngine template system.
