Turn into a basic HTML 5 theme. It should work on all modern browsers.
git-svn-id: http://svn.habariproject.org/habari-extras/themes/arctic_ice/trunk@3656 f4a90942-1786-4aa1-b092-57c31935ddc3

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+Version 1.1
+- Began converting to HTML 5.
+
 ﻿Version 1.0
 *** This version needs a minimum of Habari 0.7 to run ***
 - Converted the comment form to Habari's built-in form.
